--- a/resources/style.css
+++ b/resources/style.css
@@ -1,4 +1,69 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+body {
+    font-family: 'Lato', sans-serif;
+}
+header {
+    user-select: none;
+    padding: 15px 0;
+    border-bottom: 1px solid black;
+}  
 header a {
     text-decoration: none;
     color: inherit;
+}
+.logo {
+    padding-right: 10px;
+}
+.main-menu {
+    position: relative;
+    font-size:18px;
+}
+.main-menu::before {
+    content: '';
+    position: absolute;
+    width:100%;
+    background-color: white;
+    height: 1px;
+    top: -7px;
+    left: 0;
+}
+.lang-switch a:nth-child(1){
+    position: relative;
+}
+.lang-switch a:nth-child(1)::after {
+    content: '';
+    position: absolute;
+    background-color: white;
+    width: 1px;
+    height: 10px;
+    top: 7px;
+    right: -8px;
+}
+.img_header img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.img_header{
+    height: 400px;
+}
+
+.ml-auto {
+    margin-left: auto;
+}
+.mr-auto {
+    margin-right: auto;
+}
+
+.home_section {
+    margin-top: -130px;
+}
+form {
+    box-shadow: -1px 7px 10px 2px rgba(0,0,0,0.22);
+}
+
+::-webkit-datetime-edit-year-field:not([aria-valuenow]),
+::-webkit-datetime-edit-month-field:not([aria-valuenow]),
+::-webkit-datetime-edit-day-field:not([aria-valuenow]) {
+    color: transparent;
 }
